2009-09-14  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/connect.c: Fixed a memory leak that was reported by
	cppcheck.

2009-09-13  Bas Wijnen <shevek@fmf.nl>
	* Makefile.am: Suppress GNU make specific warnings.

2009-09-06  Roland Clobus <rclobus@bigfoot.com>
	* common/network.c, common/network.h: Use all available protocols when
	connecting to a server. Fixes Debian bug #530032, Ubuntu bug #375745.
	* meta-server/main.c: Use a format string for the call to syslog.

2009-08-29  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/game-resources.c, editor/gtk/game-devcards.c,
	editor/gtk/game-resources.h, editor/gtk/game-buildings.c,
	editor/gtk/game-devcards.h, editor/gtk/game-buildings.h,
	common/gtk/game-rules.c, common/gtk/game-rules.h,
	common/gtk/game-settings.c, common/gtk/game-settings.h,
	common/gtk/metaserver.c, common/gtk/metaserver.h,
	common/gtk/select-game.c, common/gtk/select-game.h, configure.ac,
	client/gtk/plenty.c, client/gtk/resource-table.c,
	client/gtk/resource-table.h, client/gtk/player.c,
	client/gtk/quote-view.h, client/gtk/settingscreen.c, client/gtk/chat.c,
	client/gtk/gui.c, client/gtk/connect.c: Prepare for GTK3 by
	implementing more stricy deprecation rules.
	* po/fr.po: Fixed a typo (thanks to Olivier Berger for reporting)

2009-08-27  Roland <rclobus@bigfoot.com>
	* client/gtk/gui.c, client/gtk/legend.c: Show legend dialog without
	scrollbars when it is shown as a separate window.
	* macros/gnome-autogen.sh: Synchronized with gnome-common, to add
	support for automake-1.10.
	* editor/gtk/editor.c, common/gtk/game-rules.c, common/gtk/theme.c,
	common/gtk/guimap.c, common/game.c, common/map.c, server/gtk/main.c,
	server/meta.c, server/turn.c, server/pregame.c, server/admin.c,
	server/buildutil.c, client/gtk/player.c, client/gtk/legend.c,
	client/gtk/trade.c, client/gtk/quote-view.c,
	client/gtk/settingscreen.c, client/gtk/gui.c, client/gtk/connect.c,
	client/common/client.c, client/ai/greedy.c, client/ai/ai.c:
	make reindent