@@ -81,9 +81,13 @@ Icons
 .RS
 Main icon
 .RE
-.B $HOME/.config/pioneers
+.B $XDG_CONFIG_HOME/pioneers
 .RS
 Saved settings
+.RE
+.B $XDG_DATA_HOME/pioneers/themes
+.RS
+Personal themes
 .RE
 
 .SH AUTHOR
